java: update dependencies
Signed-off-by: Runji Wang <wangrunji0408@163.com>