@@ -6,47 +6,80 @@
   <groupId>com.risingwave</groupId>
   <artifactId>risingwave-udf</artifactId>
   <packaging>jar</packaging>
-  <version>0.1.3-SNAPSHOT</version>
-
-  <parent>
-    <artifactId>risingwave-java-root</artifactId>
-    <groupId>com.risingwave</groupId>
-    <version>0.1.0-SNAPSHOT</version>
-    <relativePath>../pom.xml</relativePath>
-  </parent>
+  <version>0.2.0-SNAPSHOT</version>
 
   <name>RisingWave Java UDF SDK</name>
   <url>https://docs.risingwave.com/docs/current/udf-java</url>
+
+  <licenses>
+    <license>
+      <name>Apache License, Version 2.0</name>
+      <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
+    </license>
+  </licenses>
+
+  <developers>
+    <developer>
+      <name>Runji Wang</name>
+      <email>wangrunji0408@163.com</email>
+      <organization>RisingWave Labs</organization>
+      <organizationUrl>https://www.risingwave.com</organizationUrl>
+    </developer>
+  </developers>
+
+  <scm>
+    <connection>scm:git:https://github.com/risingwavelabs/risingwave.git</connection>
+    <developerConnection>scm:git:https://github.com/risingwavelabs/risingwave.git</developerConnection>
+    <url>https://github.com/risingwavelabs/risingwave</url>
+  </scm>
+
+  <properties>
+    <maven.compiler.source>11</maven.compiler.source>
+    <maven.compiler.target>11</maven.compiler.target>
+  </properties>
 
   <dependencies>
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-engine</artifactId>
-      <version>5.9.1</version>
+      <version>5.10.2</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.apache.arrow</groupId>
       <artifactId>arrow-vector</artifactId>
-      <version>14.0.0</version>
+      <version>16.0.0</version>
     </dependency>
     <dependency>
       <groupId>org.apache.arrow</groupId>
       <artifactId>flight-core</artifactId>
-      <version>14.0.0</version>
+      <version>16.0.0</version>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
-      <version>2.0.7</version>
+      <version>2.0.13</version>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-simple</artifactId>
-      <version>2.0.7</version>
+      <version>2.0.13</version>
     </dependency>
   </dependencies>
   <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>3.2.5</version>
+        <configuration>
+          <enableAssertions>true</enableAssertions>
+          <argLine>
+            --add-opens=java.base/java.nio=ALL-UNNAMED
+          </argLine>
+        </configuration>
+      </plugin>
+    </plugins>
     <extensions>
       <extension>
         <groupId>kr.motd.maven</groupId>
